fix: use Java 8 compatible APIs in RealmUrlCheck
Co-authored-by: Cursor <cursoragent@cursor.com>